tests/NormalTests/paczka1/fuzzy1/38388274.err
Error in line 22: cn3Q0CNur S65 40,6
Error in line 29: cn3Q0CNur A402 91,7
Error in line 21: OTSiTvf S65 121,9
Error in line 34: OTSiTvf S490 39,6
Error in line 36: OTSiTvf A402 14,2
Error in line 31: cn3Q0CNur S65 25,9
